# Publish_Subscribe_Implementation

./: CMakeLists.txt  README.md  ema_supercomputer.cpp
include/internal_com/: internal_com.h  internal_def_type.h  observer.h
include/ipc_pubsub/: ipc_pubsub.h  observer.h
include/socket_pubsub/: observer.h  socket_def_type.h  socket_pubsub.h
scripts/: build.sh
src/internal_com/: CMakeLists.txt
src/internal_com/include/: data_channel.h  queue.h
src/internal_com/src/: internal_com.cpp
src/ipc_pubsub/: CMakeLists.txt  ipc_pubsub.cpp
src/ipc_pubsub/include/: ipc_publisher.h  ipc_pubsub_common.h  ipc_subscriber.h
src/ipc_pubsub/src/: ipc_publisher.cpp  ipc_subscriber.cpp
src/socket_pubsub/: CMakeLists.txt  socket_pubsub.cpp
src/socket_pubsub/include/: socket_filter.h  socket_publisher.h  socket_publisher_service.h  socket_pubsub_server.h  socket_subscriber.h  socket_subscriber_service.h
src/socket_pubsub/src/: socket_filter.cpp  socket_publisher.cpp  socket_publisher_service.cpp  socket_pubsub_server.cpp  socket_subscriber.cpp  socket_subscriber_service.cpp
